# KaoGenie

./: README.md  setup.sh
assets/submissions/: The Olympian Trio_Product Hackathon 2025 Submission.pptx
backend/: .env.example  .gitignore  README.md  archive.txt  main.py  pyproject.toml  requirements.txt
backend/config/: exam_presets.py  logging_config.py  settings.py
backend/prompts/exam_compiler_agent/: system.prompt
backend/prompts/general_solver_agent/: system.prompt
backend/prompts/math_solver_agent/: system.prompt
backend/prompts/query_generator/: system.prompt
backend/prompts/question_generator/: system.prompt
backend/prompts/question_spec_generator/: system.prompt
backend/src/deep_searcher/agents/: exam_compiler_agent.py  general_solver_agent.py  math_solver_agent.py  query_generator_agent.py  question_generator_agent.py  question_spec_generator_agent.py
backend/src/deep_searcher/chains/: exam_pipeline.py
backend/src/deep_searcher/data_pipeline/: crawler.py  url_processor.py  web_searcher.py
backend/src/deep_searcher/models/: exam_models.py
backend/src/deep_searcher/utils/: file_utils.py  sanitizers.py  source_extractor.py  streaming_utils.py  url_utils.py
backend/src/deep_searcher/vector_store/: manager.py
frontend/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: ErrorAlert.tsx  ExamDisplay.tsx  ExamFormFile.tsx  ExamFormTopic.tsx  Layout.tsx  LoadingSpinner.tsx  MarkdownRenderer.tsx  ProgressDisplay.tsx  QuestionSpecInput.tsx  ThemeToggle.tsx
frontend/components/icons/: CheckCircleIcon.tsx  MoonIcon.tsx  PlusIcon.tsx  RefreshIcon.tsx  SunIcon.tsx  TrashIcon.tsx  XCircleIcon.tsx
frontend/services/: apiService.ts
