[project]
name = "mcp-analysis-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.7.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.9.0",
    "asgiref==3.8.1",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.4",
    "brotli==1.1.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "chromadb==1.0.13",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "contourpy==1.3.2",
    "cryptography==45.0.4",
    "cssselect==1.3.0",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "duckduckgo-search==8.0.4",
    "durationpy==0.10",
    "effdet==0.4.1",
    "emoji==2.14.1",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.0",
    "fake-http-header==0.3.5",
    "fake-useragent==2.2.0",
    "fastapi==0.115.13",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flatbuffers==25.2.10",
    "fonttools==4.58.4",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "google-api-core==2.25.1",
    "google-api-python-client==2.172.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-cloud-vision==3.10.2",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.3",
    "grpcio==1.73.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.33.0",
    "humanfriendly==10.0",
    "humanize==4.12.3",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.8",
    "kubernetes==33.1.0",
    "langchain==0.3.25",
    "langchain-chroma==0.2.4",
    "langchain-community==0.3.25",
    "langchain-core==0.3.65",
    "langchain-google-genai>=2.1.5",
    "langchain-openai==0.3.24",
    "langchain-text-splitters==0.3.8",
    "langdetect==1.0.9",
    "langsmith==0.3.45",
    "litellm==1.72.6.post1",
    "lxml==5.4.0",
    "markdown==3.8.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "multidict==6.5.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "numpy==2.3.0",
    "oauthlib==3.3.0",
    "olefile==0.47",
    "omegaconf==2.3.0",
    "onnx==1.18.0",
    "onnxruntime==1.22.0",
    "openai==1.88.0",
    "opencv-python==4.11.0.86",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.34.1",
    "opentelemetry-exporter-otlp-proto-common==1.34.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.34.1",
    "opentelemetry-instrumentation==0.55b1",
    "opentelemetry-instrumentation-asgi==0.55b1",
    "opentelemetry-instrumentation-fastapi==0.55b1",
    "opentelemetry-proto==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "opentelemetry-util-http==0.55b1",
    "orjson==3.10.18",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.3.0",
    "pdf2image==1.17.0",
    "pdfminer-six==20250506",
    "pi-heif==0.22.0",
    "pikepdf==9.9.0",
    "pillow==10.4.0",
    "posthog==5.1.0",
    "primp==0.15.0",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "psutil==7.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.1",
    "pycocotools==2.0.10",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pyee==13.0.0",
    "pygments==2.19.1",
    "pyopenssl==25.1.0",
    "pypandoc==1.15",
    "pyparsing==3.2.3",
    "pypdf==5.6.0",
    "pypdfium2==4.30.1",
    "pyperclip==1.9.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.0",
    "python-iso639==2025.2.18",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "python-oxmsg==0.0.2",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.13.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "scipy==1.15.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tf-playwright-stealth==1.2.0",
    "tiktoken==0.9.0",
    "timm==1.0.15",
    "tokenizers==0.21.1",
    "tomli==2.2.1",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
    "transformers==4.52.4",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "unstructured==0.17.2",
    "unstructured-client==0.36.0",
    "unstructured-inference==1.0.5",
    "unstructured-pytesseract==0.3.15",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "watchfiles==1.1.0",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "xlrd==2.0.2",
    "xlsxwriter==3.2.5",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zipp==3.23.0",
    "zstandard==0.23.0",
]
